feat(subscription): add premium subscription and billing flow
Implemented functionality to create and upgrade to premium subscriptions. A new confirmation URL is generated during the payment process, which users must complete to activate their premium status. Added integration tests to ensure the subscription lifecycle works as expected, including cancellation and plan updates.